@@ -4,6 +4,7 @@
     * Add docs for Net::SSLeay::X509_CRL class.
     * Add docs for Net::SSLeay::X509_VERIFY_PARAM class.
     * Add docs for Net::SSLeay::X509_STORE_CTX class.
+    * Add docs for Net::SSLeay::X509_STORE class.
 0.006 2024-11-05
   [Requirement Changes]
     * Require SPVM 0.990028.
